<resources>
    <string name="app_name">flow</string>
    <string name="single_network_call">Single Network Call</string>
    <string name="series_network_calls">Series Network Calls</string>
    <string name="parallel_network_calls">Parallel Network Calls</string>
    <string name="room_database">Room Database</string>
    <string name="timeout">Timeout</string>
    <string name="catch_error">Catch Error</string>
    <string name="emit_all_error">EmitAll Error</string>
    <string name="completion">Completion</string>
    <string name="long_running_task">Long Running Task</string>
    <string name="two_long_running_tasks">Two Long Running Tasks</string>
    <string name="filter">Filter</string>
    <string name="map">Map</string>
    <string name="reduce">Reduce</string>
    <string name="search">Search</string>
    <string name="retry">Retry</string>
    <string name="retry_when">RetryWhen</string>
    <string name="retry_exponential_backoff">RetryExponentialBackoff</string>
    <string name="result">Result</string>
    <string name="iterator_operators">Iterator Operators</string>
    <string name="using_iterator">Using Iterator</string>
    <string name="using_for">Using For</string>
    <string name="using_for_each">Using For-Each</string>
    <string name="using_for_each_indexed">Using For-Each-Indexed</string>
    <string name="partition">Partition</string>
    <string name="reduce_operators">Reduce Operators</string>
    <string name="maxby">MaxBy</string>
    <string name="minby">MinBy</string>
    <string name="average">Average</string>
    <string name="sumby">SumBy</string>
    <string name="sum">Sum</string>
    <string name="mathematical_operators">Mathematical Operators</string>
    <string name="long_operation">Long operation</string>
    <string name="demooncompletion">DemoOnCompletion</string>
</resources>