<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:padding="@dimen/screen_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/startSingleNetworkCallActivity"
            android:text="@string/single_network_call"
            style="@style/launchBtnStyle"/>

        <Button
            android:id="@+id/startFilterActivity"
            android:text="@string/filter"
            style="@style/launchBtnStyle"/>

        <Button
            android:id="@+id/startParallelNetworkCallsActivity"
            android:text="@string/parallel_network_calls"
            style="@style/launchBtnStyle"/>

        <Button
            android:id="@+id/startIteratorFragment"
            android:text="@string/iterator_operators"
            style="@style/launchBtnStyle"/>

        <Button
            android:id="@+id/startMapFragmentId"
            android:text="@string/map"
            style="@style/launchBtnStyle"/>

        <Button
            android:id="@+id/startPartitionFragmentId"
            android:text="@string/partition"
            style="@style/launchBtnStyle"/>


    </LinearLayout>
</ScrollView>