<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootId"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/operatorsContainerId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnIteratorId"
            style="@style/launchBtnStyle"
            android:text="@string/using_iterator" />

        <Button
            android:id="@+id/btnForId"
            style="@style/launchBtnStyle"
            android:text="@string/using_for" />

        <Button
            android:id="@+id/btnForEachId"
            style="@style/launchBtnStyle"
            android:text="@string/using_for_each" />

        <Button
            android:id="@+id/btnForEachIndexedId"
            style="@style/launchBtnStyle"
            android:text="@string/using_for_each_indexed" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>